--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,10 +21,10 @@
     "noFallthroughCasesInSwitch": true,
 
     /* Folder Source */
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["./src/*"],
-    },       
+    // "baseUrl": "./",
+    // "paths": {
+    //   "@/*": ["./src/*"],
+    // },       
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
